[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/theme0.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/regular_big1.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/themes/label_opaque.tres" type="StyleBox" id=4]
[ext_resource path="res://nodes/controls.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/save_menu.tscn" type="PackedScene" id=7]

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
layer = 90
script = ExtResource( 1 )

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.501961, 0.501961, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="menu"]
margin_left = 836.0
margin_top = 339.0
margin_right = 1081.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" type="Button" parent="menu"]
margin_left = 849.0
margin_top = 403.0
margin_right = 1065.0
margin_bottom = 453.0
text = "resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="menu"]
margin_left = 849.0
margin_top = 466.0
margin_right = 1065.0
margin_bottom = 516.0
text = "save dream"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls_button" type="Button" parent="menu"]
margin_left = 849.0
margin_top = 530.473
margin_right = 1065.0
margin_bottom = 580.473
text = "controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="menu"]
margin_left = 849.0
margin_top = 593.473
margin_right = 1065.0
margin_bottom = 643.473
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_button" type="Button" parent="menu"]
margin_left = 849.0
margin_top = 659.18
margin_right = 1065.0
margin_bottom = 709.18
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" parent="menu" instance=ExtResource( 5 )]
visible = false

[node name="settings" parent="menu" instance=ExtResource( 6 )]
visible = false

[node name="save_menu" parent="menu" instance=ExtResource( 7 )]
visible = false

[node name="menu_dialog" type="ConfirmationDialog" parent="menu"]
margin_left = 1184.44
margin_top = 347.394
margin_right = 1413.44
margin_bottom = 439.394
window_title = "confirm"
dialog_text = "wake up?"

[connection signal="pressed" from="menu/resume_button" to="." method="_unpause_game"]
[connection signal="pressed" from="menu/save_button" to="menu/save_menu" method="_show_menu"]
[connection signal="pressed" from="menu/controls_button" to="menu/controls" method="_show_menu"]
[connection signal="pressed" from="menu/settings_button" to="menu/settings" method="_show_menu"]
[connection signal="pressed" from="menu/menu_button" to="." method="_menu_pressed"]
[connection signal="confirmed" from="menu/menu_dialog" to="." method="_menu_confirmed"]
